# tiralabraRSA

./: .gitignore  README.md  pylintrc  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: labra-ci.yml
documentation/: User guide.md  implementationdocument.md  projectdefenition.md  testingdocument.md  viikkoraportti 1.md  viikkoraportti 2.md  viikkoraportti 3.md  viikkoraportti 4.md  viikkoraportti 5.md  viikkoraportti 6.md
src/: main.py  rsa.py
src/primes/: prandom.py  search.py
testdata/: longtext.txt
tests/: test_eulerlike.py  test_mathfuncs.py  test_prandom.py  test_rsa.py
tests/data/: prime.json  rsacorrect.json
tiraRSA/: main.py  rsa.py
tiraRSA/eulerlike/: eulerfunc.py
tiraRSA/mathfuncs/: eulerfunc.py  factor.py
tiraRSA/primes/: prandom.py  search.py
tiraRSA/rsa/: rsa_interface.py  rsamath.py
tiraRSA/tests/: test_rsa.py
