[metadata]
name = rsautility
version = 0.0.0
description = Simple RSA tool for TiraLabra
author = MvB
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    tiraRSA
python_requires = >=3.6
zip_safe = no
